# fastapi_production

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: router.py
app/core/: config.py
app/db/: session.py
app/models/: user.py
app/schemas/: user.py
